Sidenav header fix collapse

--- a/src/assets/styles/cmps/SideNav.css
+++ b/src/assets/styles/cmps/SideNav.css
@@ -14,6 +14,33 @@
         .station-playlist {
             display: none;
         }
+
+        .sidenav-header {
+            height: fit-content;
+            align-items: center;
+            flex-direction: column;
+
+            .btn-create-station {
+                display: grid;
+                height: fit-content;
+                width: fit-content;
+                place-items: center;
+                margin-block-end: 10px;
+            }
+
+            :nth-child(2) {
+                padding: 8px;
+                border-radius: 50%;
+                margin: 0;
+
+                svg {
+                    width: 1rem;
+                    height: 1rem;
+                    margin: 0;
+                    padding: 0;
+                }
+            }
+        }
     }
 
     .sidenav-header {
@@ -40,7 +67,7 @@
             height: 2.25rem;
             padding: 0.5rem 1rem;
             background-color: var(--clr2);
-            
+
             svg {
                 margin-inline-end: calc(var(--spacerem-sm) / 4);
                 width: 16px;
@@ -53,7 +80,7 @@
             }
         }
     }
-    
+
     *> {
         width: calc(100% - 2 * var(--spacepx-s));
         margin: 0 auto;
